[package]
name = "type_description"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
description = "Machine-readable type descriptions"
repository = "https://github.com/TheNeikos/type_description"
keywords = ["type_description", "serde", "machine-readable"]
categories = ["config", "rust-patterns", "value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["type_description_derive"]

[[bin]]
name = "describe_types"
required-features = ["bin"]

[features]
default = ["render"]
render = ["indexmap"]
bin = ["clap", "serde_json"]

[dependencies]
clap = { version = "4.0.29", features = ["derive"], optional = true }
indexmap = { version = "1.9.2", optional = true }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = { version = "1.0.89", optional = true }
type_description_derive = { version = "0.3.0", path = "type_description_derive" }

[dev-dependencies]
serde_json = "1.0.89"
