[package]
name = "type_description"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
description = "Machine-readable type descriptions"
repository = "https://github.com/TheNeikos/type_description"
keywords = ["type_description", "serde", "machine-readable"]
categories = ["config", "rust-patterns", "value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["type_description_derive", "online_description_generator"]

[[bin]]
name = "describe_types"
required-features = ["bin"]

[features]
default = ["render"]
render = ["indexmap"]
bin = ["clap", "serde_json"]
url = ["dep:url"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"], optional = true }
indexmap = { version = "1.9.3", optional = true }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95", optional = true }
type_description_derive = { version = "0.3.0", path = "type_description_derive" }

url = { version = "2", optional = true }

[dev-dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
trybuild = "1.0.80"
