[package]
name = "type_description"
version = "0.6.0"
edition = "2021"
license = "MPL-2.0"
description = "Machine-readable type descriptions"
repository = "https://github.com/TheNeikos/type_description"
keywords = ["type_description", "serde", "machine-readable"]
categories = ["config", "rust-patterns", "value-formatting"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["type_description_derive", "online_description_generator"]

[[bin]]
name = "describe_types"
required-features = ["bin"]

[features]
default = []
render = ["render_markdown", "render_terminal"]
render_markdown = ["dep:indexmap"]
render_terminal = ["dep:termimad", "dep:pretty", "dep:nu-ansi-term"]
bin = ["render", "dep:clap", "dep:serde_json", "dep:term_size"]
bytesize = ["dep:bytesize"]
url = ["dep:url"]
uuid = ["dep:uuid"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"], optional = true }
indexmap = { version = "2.1.0", optional = true }
nu-ansi-term = { version = "0.49.0", optional = true }
pretty = { version = "0.12.3", optional = true }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107", optional = true }
term_size = { version = "0.3.2", optional = true }
termimad = { version = "0.25.2", optional = true }
type_description_derive = { version = "0.6.0", path = "type_description_derive" }

bytesize = { version = "1", optional = true }
url = { version = "2", optional = true }
uuid = { version = "1", optional = true }

[dev-dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
trybuild = "1.0.85"

[package.metadata.docs.rs]
all-features = true
