[package]
name = "online_description_generator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.83"

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
