[package]
name = "online_description_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.3"
console_error_panic_hook = "0.1.7"
markdown = "1.0.0-alpha.12"
serde_json = "1.0.105"
type_description = { version = "0.6.0", path = "..", features = ["render_markdown"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = [
    "Window",
    "Document",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlDivElement",
    "Node",
    "Text",
    "Event",
    "Location",
    "console",
] }
