[package]
name = "type_description_derive"
version = "0.6.0"
edition = "2021"
license = "MPL-2.0"
description = "Proc Macro for the type_description crate"
repository = "https://github.com/TheNeikos/type_description"
keywords = ["proc-macro", "type_description"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.27"
syn = { version = "1.0.109", features = ["extra-traits"] }
proc-macro-error = "1.0.4"
